fix: правки по ревью

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -17,7 +17,8 @@ $cardButtonHover: #D3D6DA;
 $fileCardInput: #D5D8DE;
 $cardBg: #F3F4F6;
 $cardHoverButton: #C4C8D1;
-
+$black: #010101;
+$disabledCheckbox: #E0E0E0;
 // SIZES
 $large: 1440px;
 $big: 1024px;
