feature: Раздел 'Сотрудники'

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -19,6 +19,7 @@ $cardBg: #F3F4F6;
 $cardHoverButton: #C4C8D1;
 $black: #010101;
 $disabledCheckbox: #E0E0E0;
+
 // SIZES
 $large: 1440px;
 $big: 1024px;
@@ -30,6 +31,7 @@ $transition-sidebar: .2s ease-in-out;
 $transition-cubic-bezier: all 0.3s cubic-bezier(.25, .8, .25, 1);
 
 // BORDER
+$ultraSmallRadius: 4px;
 $smallRadius: 8px;
 $mediumRadius: 16px;
 
