--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -19,7 +19,7 @@ $cardBg: #F3F4F6;
 $cardHoverButton: #C4C8D1;
 $black: #010101;
 $disabledCheckbox: #E0E0E0;
-
+$bgTooltip: #27272A;
 // SIZES
 $large: 1440px;
 $big: 1024px;
