feature: Мой профиль

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -20,6 +20,8 @@ $cardHoverButton: #C4C8D1;
 $black: #010101;
 $disabledCheckbox: #E0E0E0;
 $bgTooltip: #27272A;
+$borderButton: #6B7280;
+
 
 // SIZES
 $large: 1440px;
